--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,88 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body, html {
+  font-size: 0.9rem;
+  background: #f2f3f7
+}
+body, .form-control {
+  font-size: 0.9rem
+}
+body,
+html,
+#root,
+.App {
+  min-height: 100vh
+}
+.btn {
+  font-size: 0.9rem;
+  font-weight: 500;
+  padding: 0.66rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 .1rem .1rem rgba(0,0,0,.05)!important
+}
+.App-link {
+  color: #61dafb;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.btn-light {
+  border-color: #dedede
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-light:hover {
+  border-color: #dedede;
+  background-color: #f3f3f3
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.shadow {
+  box-shadow: 0 .1rem .1rem rgba(0,0,0,.05)!important
 }
 
+.modal-content,
 .card {
-  padding: 2em;
+  overflow: hidden;
+  border-radius: 0.756rem
 }
 
-.read-the-docs {
-  color: #888;
+hr {
+  opacity: 0.1
+}
+
+.table th {
+  border-top: 1px solid #0000001a;
+  border-bottom: 1px solid #0000001a;
+  border-bottom-color: #0000001a!important
+}
+.table td {
+   text-align: left;
+}
+.table tr th:first-child,
+.table tr td:first-child {
+  padding-left: 0
+}
+.table tr th:last-child,
+.table tr td:last-child {
+  padding-right: 0
+}
+
+.form-control {
+  background: #f5f7f9;
+  font-weight: 400;
+  padding: .5rem .75rem;
+  border: none
+}
+.form-control:hover {
+  background: #f5f7f9;
+}
+.form-control::placeholder,
+.form-control::-ms-input-placeholder,
+.form-control:-ms-input-placeholder {
+  color: #9fa8b0
+}
+.form-control:focus {
+  background: #f5f7f9;
+}
+
+#invoiceCapture {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
